Adapt layout & content, deployment to GH pages

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -19,20 +19,30 @@ import '@fontsource-variable/inter';
 // Urbanist
 ---
 
+
 <style is:inline>
   :root {
+    
+    --guitar-brown: rgb(139, 69, 19); 
+    --guitar-light-brown: rgb(210, 180, 140);
+    --guitar-dark-brown: rgb(90, 51, 19);
+    --guitar-gold: rgb(218, 165, 32);
+    --guitar-cream: rgb(245, 245, 220);
+    --guitar-black: rgb(47, 47, 47);
+    --guitar-highlight: rgb(193, 154, 107);
+    
     --aw-font-sans: 'Inter Variable';
     --aw-font-serif: 'Inter Variable';
     --aw-font-heading: 'Inter Variable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: rgb(90, 51, 19);
+    --aw-color-secondary:  rgb(139, 69, 19);
     --aw-color-accent: rgb(109 40 217);
 
-    --aw-color-text-heading: rgb(0 0 0);
+    --aw-color-text-heading: rgb(47, 47, 47);
     --aw-color-text-default: rgb(16 16 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: rgb(255 255 255);
+    --aw-color-bg-page: rgb(210 180 140 / 30%);
 
     --aw-color-bg-page-dark: rgb(3 6 32);
 
