--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -38,7 +38,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline
-      subtitle="A statically generated blog example with news, tutorials, resources and other interesting content related to AstroWind"
+      subtitle="Bleib auf dem Laufenden, was bei der-gitarrenbausatz.de gerade so passiert und lerne mehr über unsere Aktivitäten..."
     >
       The Blog
     </Headline>
