--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,11 @@ import FAQs from '~/components/widgets/FAQs.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import Features3 from '~/components/widgets/Features3.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
+import Hero2 from '../components/widgets/Hero2.astro';
+import Content from "../components/widgets/Content.astro";
 
 const metadata = {
-  title: 'Pricing',
+  title: 'Varianten',
 };
 ---
 
@@ -16,136 +18,51 @@ const metadata = {
   <!-- HeroText Widget ******************* -->
 
   <HeroText
-    tagline="Pricing"
-    title="Stellar Pricing for Every Journey"
-    subtitle="Choose the perfect plan that aligns with your cosmic goals."
-  />
-
-  <!-- Pricing Widget ******************* -->
-
-  <Prices
-    title="Our prices"
-    subtitle="Only pay for what you need"
-    prices={[
-      {
-        title: 'basic',
-        subtitle: 'Optimal choice for personal use',
-        price: 29,
-        period: 'per month',
-        items: [
-          {
-            description: 'Etiam in libero, et volutpat',
-          },
-          {
-            description: 'Aenean ac nunc dolor tristique',
-          },
-          {
-            description: 'Cras scelerisque accumsan lib',
-          },
-          {
-            description: 'In hac habitasse',
-          },
-        ],
-        callToAction: {
-          target: '_blank',
-          text: 'Get started',
-          href: '#',
-        },
-      },
-      {
-        title: 'standard',
-        subtitle: 'Optimal choice for small teams',
-        price: 69,
-        period: 'Per Month',
-        items: [
-          {
-            description: 'Proin vel laoreet',
-          },
-          {
-            description: 'Ut efficitur habitasse egestas',
-          },
-          {
-            description: 'Volutpat hac curabitur',
-          },
-          {
-            description: 'Pellentesque blandit ut nibh',
-          },
-          {
-            description: 'Donec fringilla sem',
-          },
-        ],
-        callToAction: {
-          target: '_blank',
-          text: 'Get started',
-          href: '#',
-        },
-        hasRibbon: true,
-        ribbonTitle: 'popular',
-      },
-      {
-        title: 'premium',
-        subtitle: 'Optimal choice for companies',
-        price: 199,
-        period: 'Per Month',
-        items: [
-          {
-            description: 'Curabitur suscipit risus',
-          },
-          {
-            description: 'Aliquam habitasse malesuada',
-          },
-          {
-            description: 'Suspendisse sit amet blandit',
-          },
-          {
-            description: 'Suspendisse auctor blandit dui',
-          },
-        ],
-        callToAction: {
-          target: '_blank',
-          text: 'Get started',
-          href: '#',
-        },
-      },
-    ]}
+    title="Deine Traumgitarre zum Selberbauen"
+    subtitle="Der Gitarrenbausatz von Gitarrenbauern für Gitarrenbauer"
   />
 
   <!-- Features3 Widget ************** -->
 
   <Features3
-    title="Price-related features"
-    subtitle="Discover the advantages of choosing our plans"
+    title="Unser Konzept"
+    subtitle="Warum du dich für unseren Bausatz entscheiden solltest"
     columns={2}
     items={[
       {
-        title: 'Tiered Pricing Plans',
-        description: 'Choose from a range of pricing plans designed to accommodate different budgets and requirements.',
+        title: 'Lange abgelagerte Klanghölzer',
+        description:
+          'Bei uns bekommst du kein Billig-Sperrholz sondern lange gelagerte Tonhölzer in Top-Qualität. Es sind dieselben Hölzer, die wir auch in unserer Gitarrenbauwerkstatt für den Bau hochwertiger Akustikgitarren verwenden.',
+        icon: 'tabler:wood',
+      },
+      {
+        title: 'Inklusive Bauform',
+        description:
+          'Zu jedem Bausatz verleihen wir die dazu passenden Bauformen - du musst dir also keine teuren Formen kaufen oder selber bauen. Erst mit einer Bauform ist der präzise Zusammenbau einer Gitarre möglich.',
+        icon: 'tabler:irregular-polyhedron',
+      },
+      {
+        title: 'Detaillierte Bauanleitung und 1:1 Bauplan',
+        description:
+          'Neben allen Bauteilen für eine komplette Gitarre kommt der Bausatz mit einer detaillierten Schritt-für-Schritt-Bauanleitung und einem maßstabsgetreuen Plan in Originalgröße. Damit kannst du den Bau deiner Gitarre Schritt für Schritt nachvollziehen und bekommst zahlreiche Tipps für dein Trauminstrument.',
+        icon: 'tabler:directions',
+      },
+      {
+        title: 'Unterschiedlicher Vorfertigungsgrad',
+        description: `Unseren Bausatz bieten wir in unterschiedlichen Fertigungsgraden an. Je nach deinen handwerklichen Fertigkeiten und der Ausstattung deiner Werkstatt, kannst du dir damit den für dich passenden Baukasten aussuchen.`,
         icon: 'tabler:stairs',
       },
       {
-        title: 'Transparent Pricing',
-        description: 'Clearly displayed pricing details for each plan, with no hidden costs or unexpected charges.',
-        icon: 'tabler:flip-vertical',
+        title: 'Kein Bausatz von der Stange',
+        description:
+          'Um dir deine Traumgitarre nach deinen Wünschen und Vorstellungen zu bauen, kannst du bei uns aus einer Vielzahl von Modellen und Varianten auswählen. Wir fertigen jeden Bausatz individuell für dich an, damit hast du freie Wahl bei den Hölzern. Also alles andere als ein Instrument von der Stange.',
+        icon: 'tabler:brand-zapier',
       },
       {
-        title: 'Secure Payment Methods',
-        description: 'Secure payment gateways to protect your financial information during transactions.',
-        icon: 'tabler:shield-lock',
-      },
-      {
-        title: 'Instant Access',
-        description: `Immediate access to your chosen plan's features and templates upon subscription.`,
-        icon: 'tabler:accessible',
-      },
-      {
-        title: 'Upgrade Value',
-        description: 'Upgrade to higher-tier plans to unlock more features and benefits for an enhanced experience.',
-        icon: 'tabler:chevrons-up',
-      },
-      {
-        title: '24H support',
-        description: 'Questions answered via live chat, email or phone, every calendar day.',
-        icon: 'tabler:headset',
+        title: 'Wir unterstützen dich beim Bau deiner Gitarre',
+        description:
+          'Wir lassen dich nicht allein, nachdem du einen Bausatz bei uns gekauft hast. Auf Wunsch bekommst du von uns die Unterstützung, die zur Fertigstellung deiner Gitarre brauchst - zu fairen Preisen!',
+        icon: 'tabler:heart-handshake',
       },
     ]}
     classes={{ container: 'max-w-5xl' }}
@@ -153,77 +70,166 @@ const metadata = {
 
   <!-- Steps Widget ****************** -->
 
-  <Steps
-    title="A guided journey from plans to creativity"
-    tagline="simplified process"
-    isReversed={true}
-    items={[
-      {
-        title: 'Explore plans',
-        icon: 'tabler:number-1',
-      },
-      {
-        title: 'Select a plan',
-        icon: 'tabler:number-2',
-      },
-      {
-        title: 'Sign Up / Log In',
-        icon: 'tabler:number-3',
-      },
-      {
-        title: 'Review order',
-        icon: 'tabler:number-4',
-      },
-      {
-        title: 'Enter payment details',
-        icon: 'tabler:number-5',
-      },
-      {
-        title: 'Confirmation',
-        icon: 'tabler:number-6',
-      },
-      {
-        title: 'Download and start using the template(s)',
-        icon: 'tabler:number-7',
-      },
-    ]}
-    image={{
-      src: 'https://images.unsplash.com/photo-1536816579748-4ecb3f03d72a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',
-      alt: 'Steps image',
-    }}
-  />
+  <!--<Steps-->
+  <!--  title="Schritt für Schritt zu deiner selbstgebauten Gitarre"-->
+  <!--  tagline="Bausatz Bestellung"-->
+  <!--  isReversed={true}-->
+  <!--  items={[-->
+  <!--    {-->
+  <!--      title: 'Mach dich mit unseren Bausätzen vertraut',-->
+  <!--      icon: 'tabler:number-1',-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'Wähle den Fertigungsgrad, der zu dir passt',-->
+  <!--      icon: 'tabler:number-2',-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'Pass den Bausatz nach deinen Wünschen an',-->
+  <!--      icon: 'tabler:number-3',-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'Schick uns deine Bestellung',-->
+  <!--      icon: 'tabler:number-4',-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'Wir fertigen deinen Bausatz nach Wunsch',-->
+  <!--      icon: 'tabler:number-6',-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'Bau dir deine Traumgitarre',-->
+  <!--      icon: 'tabler:number-7',-->
+  <!--    },-->
+  <!--  ]}-->
+  <!--  image={{-->
+  <!--    src: 'https://images.unsplash.com/photo-1536816579748-4ecb3f03d72a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',-->
+  <!--    alt: 'Steps image',-->
+  <!--  }}-->
+  <!--/>-->
+
+  <!-- Hero2 Widget ************** -->
+  <Content tagline="Coming soon..." title="Bausatz Varianten" content="🚧 Demnächst erfährst du an dieser Stelle mehr über unsere Bausatz-Angebote!" />
+
+  <!-- Pricing Widget ******************* -->
+
+  <!--<Prices-->
+  <!--  title="Unsere Varianten"-->
+  <!--  subtitle="Unterschiedliche Vorfertigung"-->
+  <!--  prices={[-->
+  <!--    {-->
+  <!--      title: 'raw',-->
+  <!--      subtitle: 'Für ambitionierte Gitarrenbauer',-->
+  <!--      price: 450,-->
+  <!--      period: 'all inclusive',-->
+  <!--      items: [-->
+  <!--        {-->
+  <!--          description: 'Holz für Boden, Zargen, Decke auf Stärke geschliffen',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Gehobelte Kanteln für den Hals',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Gesägtes Griffbrett',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Randeinlagen, Steg',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Holz für die Beleistung von Boden und Decke',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Bunddraht, Stegeinlage und Sattel',-->
+  <!--        },-->
+  <!--      ],-->
+  <!--      callToAction: {-->
+  <!--        target: '_blank',-->
+  <!--        text: 'Detaillierte Beschreibung',-->
+  <!--        href: '#',-->
+  <!--      },-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'standard',-->
+  <!--      subtitle: 'Für talentierte Heimwerker',-->
+  <!--      price: 650,-->
+  <!--      period: 'all inclusive',-->
+  <!--      items: [-->
+  <!--        {-->
+  <!--          description: 'Boden und Decke verleimt',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Gebogene Zargen und gebogene Randeinlagen',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Verleimter Hals',-->
+  <!--        }-->
+  <!--      ],-->
+  <!--      callToAction: {-->
+  <!--        target: '_blank',-->
+  <!--        text: 'Detaillierte Beschreibung',-->
+  <!--        href: '#',-->
+  <!--      },-->
+  <!--      hasRibbon: true,-->
+  <!--      ribbonTitle: 'Unser Tip',-->
+  <!--    },-->
+  <!--    {-->
+  <!--      title: 'premium',-->
+  <!--      subtitle: 'Für Einsteiger',-->
+  <!--      price: 850,-->
+  <!--      period: 'all inclusive',-->
+  <!--      items: [-->
+  <!--        {-->
+  <!--          description: 'Gefräster Hals',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Gefräster Steg',-->
+  <!--        },-->
+  <!--        {-->
+  <!--          description: 'Einglegtes Schalloch',-->
+  <!--        },-->
+  <!--      ],-->
+  <!--      callToAction: {-->
+  <!--        target: '_blank',-->
+  <!--        text: 'Detaillierte Beschreibung',-->
+  <!--        href: '#',-->
+  <!--      },-->
+  <!--    },-->
+  <!--  ]}-->
+  <!--/>-->
 
   <!-- FAQs Widget ******************* -->
 
   <FAQs
-    title="Pricing FAQs"
-    subtitle="Choosing the right plan is important, and we're here to answer your questions. If you have queries about our pricing options, you're in the right place."
+    title="Häufig gestellte Fragen zu unseren Bausätzen"
+    subtitle="Du hast noch Fragen zur Wahl des passenden Bausatzes, benötigtem Werkzeug oder Vorkenntnissen - dann lies dir unsere FAQs durch."
     columns={1}
     items={[
       {
-        title: 'Do the plans come with customer support?',
+        title: 'Sind alle benötigten Teile zum Bau der Gitarre vollständig im Bausatz enthalten?',
         description:
-          'Absolutely, all plans include access to our dedicated customer support to assist you with any queries or concerns.',
+          'Ja - jeder Bausatz kommt mit allen notwendigen Teilen zum Bau einer vollständigen Gitarre. Die Bausätze unterscheiden sich lediglich im Grad der Vorfertigung und damit im benötigten handwerklichen Geschick zum Zusammenbau der Gitarre.',
       },
       {
-        title: 'Is there a trial period for the different plans?',
+        title: 'Was unterscheidet unseren Bausatz von anderen Angeboten?',
         description:
-          "Unfortunately, we don't offer trial periods for the plans. However, you can check out our demo section to preview the quality of our templates.",
+          'Bei uns bekommst du nicht nur das Material zum Bau der Gitarre sondern auch die Bauformen. Diese erleichtern nicht nur den Zusammenbau sondern stellen auch sicher, dass dein Instrument passgenau zusammengebaut werden kann... die Formen werden dabei vermietet - du musst sie also nicht kaufen und sparst eine Menge Geld.',
       },
       {
-        title: 'Can I switch between plans?',
+        title: 'Welche Vorkenntnisse sind notwendig?',
         description:
-          'Certainly! You can easily upgrade or downgrade your plan, at any time, to find the one that best suits your evolving requirements.',
+          'Je nach Variante brauchst du unterschiedliche Vorkenntnisse zum Bau der Gitarre. Beim einfachsten Bausatz bekommst du von uns nur das passende Holz geliefert - du hast das gesamte Bauerlebnis vom rohen Holz zur fertigen Gitarre. Dafür brauchst du schon ein gewisses handwerkliches Geschick. Bei der Variante mit dem höchsten Vorfertigungsgrad bekommst sind viele Teile bereits fertig - du musst keine Zargen biegen und der Hals kommt quasi fertig gefräst und braucht nur noch eine Feinbearbeitung von dir.',
       },
       {
-        title: 'What payment methods do you accept?',
-        description:
-          'We accept major credit cards and online payment methods to ensure a convenient and secure transaction process.',
+        title: 'Welche Werkzeuge sind notwendig?',
+        description: 'Wir stellen in Kürze eine detaillierte Werkzeugliste zur Verfügung - stay tuned!',
       },
       {
-        title: 'Are there any hidden fees beyond the displayed cost?',
+        title: 'Bekomme ich Unterstützung falls ich nicht weiter weiss?',
         description:
-          'No, the subscription cost covers all the features and templates listed under each plan. There are no hidden fees or extra charges.',
+          'Nach Absprache kannst du entweder unsere Werkstatt in Weingarten besuchen oder wir unterstützen dich per Videokonferenz aus der Ferne. Auf jeden Fall wirst du bei Problemen nicht alleine gelassen.',
+      },
+      {
+        title: 'Könnt ihr mir beim Lackieren der Gitarre helfen?',
+        description:
+          'Wir wollen an dieser Stelle nicht verheimlichen, dass das Lackieren einer Gitarre nicht ganz einfach ist. Gerne unterstützen wir dich beim Lackieren deines Instrumentes, indem wir die Lackierung entweder komplett für dich übernehmen oder dir Schritt für Schritt zur Seite stehen. Bitte kontaktiere uns dazu vorab um eine gute Lösung zu finden.',
       },
     ]}
   />
@@ -231,12 +237,12 @@ const metadata = {
   <!-- CallToAction Widget *********** -->
 
   <CallToAction
-    title="Ready to boost your projects?"
-    subtitle="Join our community of satisfied customers who have transformed their work with our templates."
+    title="Bereit, dir den Traum von der selbstgebauten Gitarre zu erfüllen?"
+    subtitle="Abonnier unseren Newsletter und erfahre als erstes wenn unsere Bausätze verfügbar sind."
     actions={[
       {
         variant: 'primary',
-        text: 'Get started now',
+        text: 'Newsletter abonnieren',
         href: '/',
       },
     ]}
