--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,7 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components';
 import Logo from '~/components/Logo.astro';
-import ToggleTheme from '~/components/common/ToggleTheme.astro';
 import ToggleMenu from '~/components/common/ToggleMenu.astro';
 import Button from '~/components/ui/Button.astro';
 
@@ -25,7 +24,6 @@ export interface Props {
   links?: Array<MenuLink>;
   actions?: Array<CallToAction>;
   isSticky?: boolean;
-  isDark?: boolean;
   isFullWidth?: boolean;
   showToggleTheme?: boolean;
   showRssFeed?: boolean;
@@ -37,7 +35,7 @@ const {
   links = [],
   actions = [],
   isSticky = false,
-  isDark = false,
+  
   isFullWidth = false,
   showToggleTheme = false,
   showRssFeed = false,
@@ -49,7 +47,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
 
 <header
   class:list={[
-    { sticky: isSticky, relative: !isSticky, dark: isDark },
+    { sticky: isSticky, relative: !isSticky },
     'top-0 z-40 flex-none mx-auto w-full border-b border-gray-50/0 transition-[opacity] ease-in-out',
   ]}
   {...isSticky ? { 'data-aw-sticky-header': true } : {}}
@@ -137,7 +135,6 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
     >
       <div class="items-center flex justify-between w-full md:w-auto">
         <div class="flex">
-          {showToggleTheme && <ToggleTheme iconClass="w-6 h-6 md:w-5 md:h-5 md:inline-block" />}
           {
             showRssFeed && (
               <a
