--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -36,7 +36,7 @@
 }
 
 #header.scroll > div:first-child {
-  @apply bg-page md:bg-white/90 md:backdrop-blur-md;
+  @apply bg-page backdrop-blur-md;
   box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
 }
 /* #header.scroll > div:last-child {
