--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,9 @@
 ---
-import { SITE } from 'astrowind:config';
+import logoImage from '~/assets/images/logo.png';
 ---
 
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap"
 >
-  🎸 {SITE?.name}
+  <img width="80" src={logoImage.src} />
 </span>
