--- a/src/components/widgets/CallToAction.astro
+++ b/src/components/widgets/CallToAction.astro
@@ -26,7 +26,7 @@ const {
 
 <WidgetWrapper id={id} containerClass={`max-w-6xl mx-auto ${classes?.container ?? ''}`} bg={bg}>
   <div
-    class="max-w-3xl mx-auto text-center p-6 rounded-md shadow-xl"
+    class="max-w-3xl mx-auto text-center p-6 rounded-md shadow-xl bg-white"
   >
     <Headline
       title={title}
