--- a/src/components/widgets/Newsletter.astro
+++ b/src/components/widgets/Newsletter.astro
@@ -24,6 +24,50 @@ const {
 } = Astro.props;
 ---
 <head>
+  <style>
+    @font-face {
+      font-display: block;
+      font-family: Roboto;
+      src: url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
+    }
+
+    @font-face {
+      font-display: fallback;
+      font-family: Roboto;
+      font-weight: 600;
+      src: url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
+    }
+
+    @font-face {
+      font-display: fallback;
+      font-family: Roboto;
+      font-weight: 700;
+      src: url(https://assets.brevo.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"), url(https://assets.brevo.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
+    }
+
+    #sib-container input:-ms-input-placeholder {
+      text-align: left;
+      font-family: Helvetica, sans-serif;
+      color: #c0ccda;
+    }
+
+    #sib-container input::placeholder {
+      text-align: left;
+      font-family: Helvetica, sans-serif;
+      color: #c0ccda;
+    }
+
+    #sib-container textarea::placeholder {
+      text-align: left;
+      font-family: Helvetica, sans-serif;
+      color: #c0ccda;
+    }
+
+    #sib-container a {
+      text-decoration: underline;
+      color: #2BB2FC;
+    }
+  </style>
   <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 </head>
 
@@ -45,32 +89,33 @@ const {
     <!-- Begin Brevo Form -->
 
     <!-- START - We recommend to place the below code where you want the form in your website html  -->
-    <div class="sib-form" style="text-align: center;">
+    <div class="sib-form" style="text-align: center;
+         background-color: #EFF2F7;                                 ">
       <div id="sib-form-container" class="sib-form-container">
-        <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; border-radius:3px; border-color:#ff4949;max-width:540px;">
+        <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
           <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
             <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">
               <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z" />
             </svg>
             <span class="sib-form-message-panel__inner-text">
-                Deine Anmeldung war nicht erfolgreich. Bitte versuche es noch einmal.
-            </span>
+                          Deine Anmeldung war nicht erfolgreich. Bitte versuche es noch einmal.
+                      </span>
           </div>
         </div>
         <div></div>
-        <div id="success-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#085229; border-radius:3px; border-color:#13ce66;max-width:540px;">
+        <div id="success-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#085229; background-color:#e7faf0; border-radius:3px; border-color:#13ce66;max-width:540px;">
           <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
             <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">
               <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
             </svg>
             <span class="sib-form-message-panel__inner-text">
-                Deine Newsletter-Anmeldung war erfolgreich.
-            </span>
+                          Deine Newsletter-Anmeldung war erfolgreich.
+                      </span>
           </div>
         </div>
         <div></div>
-        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; max-width:540px; direction:ltr">
-          <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAAhfWWXU3ciJVO1_UZudlg7K9Eg7gLpE6C_8s6w0cMqdqKv_5_YVnkm2Kuh2hgSb20VXqLrtrPWnu_IwkAA7PgiPOg_3OMw2leQYSWOgcXVJQOlmUWudwe2a2cLkTz1tf__laKMbMIlvkkOVSIMaBSsVM25kQUvgC-J7ZfTcHj0enqvUGfZT4nSbtCLnb0ig083RzKhPlLYi" data-type="subscription">
+        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+          <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAPN-TlEHwxtjgOYJXCPe-098Z36wgomdbmOreoSjELIXNZLVOUm2ba3n2_l-27M3N_7CObd3Z5_tuf3vaOKFVmLmR7H5SHnr80w9CWvRstY2NRrDlBUi9Cffw02Kr-YEXN8kyyqPINJEobyCun8Eurp-u8bE-HQBaz8Co5xOZehVOH85nKwSVtPYgiOcXaScO5ADtCnzOB_o" data-type="subscription">
             <div style="padding: 8px 0;">
               <div class="sib-input sib-form-block">
                 <div class="form__entry entry_block">
@@ -81,7 +126,7 @@ const {
                     </div>
                   </div>
 
-                  <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; border-radius:3px; border-color:#ff4949;">
+                  <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
                   </label>
                 </div>
               </div>
@@ -95,10 +140,10 @@ const {
                         <input type="checkbox" class="input_replaced" value="1" id="OPT_IN" name="OPT_IN" />
                         <span class="checkbox checkbox_tick_positive"
                               style="margin-left:"
-                        ></span><span style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#3C4858;"><p>Hiermit willige ich ein, ab sofort den Newsletter von der-gitarrenbausatz.de zu abonnieren und stimme den <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank">Datenschutzrichtlinien</a> zu. Der Newsletter erscheint ca. einmal pro Monat.</p></span> </label>
+                        ></span><span style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#3C4858; background-color:transparent;"><p>Hiermit willige ich ein, ab sofort den Newsletter von der-gitarrenbausatz.de zu abonnieren und stimme den <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank">Datenschutzrichtlinien</a> zu. Der Newsletter erscheint ca. einmal pro Monat.</p></span> </label>
                     </div>
                   </div>
-                  <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; border-radius:3px; border-color:#ff4949;">
+                  <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
                   </label>
                   <label class="entry__specification" style="font-size:12px; text-align:left; font-family:Helvetica, sans-serif; color:#8390A4; text-align:left">
                     Du kannst dich mit einem Link im Newsletter jederzeit abmelden.
@@ -120,31 +165,22 @@ const {
                     <use xlink:href="#svgIcon-sphere"></use>
                   </svg>
                 </div>
-                <div style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#687484;">
+                <div style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#687484; background-color:transparent;">
                   <p>Wir nutzen Brevo als Marketingplattform. Durch das Absenden dieses Formulars stimmst du zu, dass deine persönliche Daten (deine E-Mail Adresse) an Brevo zur Weiterverarbeitung in Übereinstimmung mit deren <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank">Datenschutzerklärung</a> übermittelt wird.</p>
                 </div>
               </div>
             </div>
             <div style="padding: 8px 0;">
-              <div class="sib-captcha sib-form-block">
-                <div class="form__entry entry_block">
-                  <div class="form__label-row ">
-                    <script>
-                      function handleCaptchaResponse() {
-                        var event = new Event('captchaChange');
-                        document.getElementById('sib-captcha').dispatchEvent(event);
-                      }
-                    </script>
-                    <div class="g-recaptcha sib-visible-recaptcha" id="sib-captcha" data-sitekey="6LfNALsqAAAAAHoGF3kiIEGY7s6WOrzvbIaBTLGe" data-callback="handleCaptchaResponse" style="direction:ltr"></div>
-                  </div>
-                  <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; border-radius:3px; border-color:#ff4949;">
-                  </label>
-                </div>
-              </div>
+              <div class="g-recaptcha" data-sitekey="6LfNALsqAAAAAHoGF3kiIEGY7s6WOrzvbIaBTLGe" data-callback="invisibleCaptchaCallback" data-size="invisible" onclick="executeCaptcha"></div>
             </div>
             <div style="padding: 8px 0;">
               <div class="sib-form-block" style="text-align: center">
-                <Button variant="primary" type="submit">Newsletter Abonnieren</Button>
+                <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:Helvetica, sans-serif; color:#FFFFFF; background-color:#5a3313; border-radius:17px; border-width:0px;" form="sib-form" type="submit">
+                  <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
+                    <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z" />
+                  </svg>
+                  Newsletter Abonnieren
+                </button>
               </div>
             </div>
 
@@ -165,7 +201,7 @@ const {
       window.REQUIRED_ERROR_MESSAGE = "Dieses Feld darf nicht leer sein. ";
 
       window.GENERIC_INVALID_MESSAGE = "Die angegebenen Informationen sind ungültig. Bitte überprüfe deine Eingabe.";
-
+      
       window.translation = {
         common: {
           selectedList: '{quantity} list selected',
@@ -183,4 +219,5 @@ const {
 
 
 <script is:inline defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
-<script is-inline src="https://www.google.com/recaptcha/api.js?hl=en"></script>
+
+<script is:inline src="https://www.google.com/recaptcha/api.js?hl=en"></script>
