Improve Newsletter styling

--- a/src/components/widgets/Newsletter.astro
+++ b/src/components/widgets/Newsletter.astro
@@ -89,8 +89,7 @@ const {
     <!-- Begin Brevo Form -->
 
     <!-- START - We recommend to place the below code where you want the form in your website html  -->
-    <div class="sib-form" style="text-align: center;
-         background-color: #EFF2F7;                                 ">
+    <div class="sib-form" style="text-align: center;">
       <div id="sib-form-container" class="sib-form-container">
         <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
           <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -114,7 +113,7 @@ const {
           </div>
         </div>
         <div></div>
-        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; direction:ltr">
           <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAPN-TlEHwxtjgOYJXCPe-098Z36wgomdbmOreoSjELIXNZLVOUm2ba3n2_l-27M3N_7CObd3Z5_tuf3vaOKFVmLmR7H5SHnr80w9CWvRstY2NRrDlBUi9Cffw02Kr-YEXN8kyyqPINJEobyCun8Eurp-u8bE-HQBaz8Co5xOZehVOH85nKwSVtPYgiOcXaScO5ADtCnzOB_o" data-type="subscription">
             <div style="padding: 8px 0;">
               <div class="sib-input sib-form-block">
