--- a/src/pages/newsletter-confirmation.astro
+++ b/src/pages/newsletter-confirmation.astro
@@ -20,7 +20,7 @@ const metadata = {
 
   <HeroText
     title="Newsletter bestätigt"
-    subtitle="Deine E-Mail Adresse wurde bestätigt. Vielen Dank, dass du dich zu unserem Newsletter angemeldet hast."
+    subtitle="Deine E-Mail Adresse wurde bestätigt. Vielen Dank, dass du unseren Newsletter abonniert hast."
   />
   
 </Layout>
