--- a/src/components/widgets/Newsletter.astro
+++ b/src/components/widgets/Newsletter.astro
@@ -89,7 +89,8 @@ const {
     <!-- Begin Brevo Form -->
 
     <!-- START - We recommend to place the below code where you want the form in your website html  -->
-    <div class="sib-form" style="text-align: center;">
+    <div class="sib-form" style="text-align: center;
+         background-color: transparent;                                 ">
       <div id="sib-form-container" class="sib-form-container">
         <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
           <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -113,8 +114,8 @@ const {
           </div>
         </div>
         <div></div>
-        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; direction:ltr">
-          <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAPN-TlEHwxtjgOYJXCPe-098Z36wgomdbmOreoSjELIXNZLVOUm2ba3n2_l-27M3N_7CObd3Z5_tuf3vaOKFVmLmR7H5SHnr80w9CWvRstY2NRrDlBUi9Cffw02Kr-YEXN8kyyqPINJEobyCun8Eurp-u8bE-HQBaz8Co5xOZehVOH85nKwSVtPYgiOcXaScO5ADtCnzOB_o" data-type="subscription">
+        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+          <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAJx-y7Pc7txczZwNdUhNg_grnj_dMjKabUYQ4WW8HVt7CfaiXduEy2extGgNphST3_DbDnTDsyJekrZV-eu5so9NpId1WJQwoXd9KuYmSVNlxvbInXiiyEqcf2I7-pp6Qvycr4dgr86xLCgtM7eXYPJla-7lFBe1CziLDHi5n-53T46tRGDidItAMHloRWwkdoNA3LeOZRnK" data-type="subscription">
             <div style="padding: 8px 0;">
               <div class="sib-input sib-form-block">
                 <div class="form__entry entry_block">
