Remove unused elements from newsletter subscription form

--- a/src/components/widgets/Newsletter.astro
+++ b/src/components/widgets/Newsletter.astro
@@ -129,8 +129,6 @@ const {
               <div class="sib-input sib-form-block">
                 <div class="form__entry entry_block">
                   <div class="form__label-row ">
-                    <label class="entry__label" style="font-weight: 700; text-align:left; font-size:16px; text-align:left; font-weight:700; font-family:Helvetica, sans-serif; color:#3c4858;" for="EMAIL" data-required="*">Gib deine E-Mail-Adresse ein, um dich anzumelden</label>
-
                     <div class="entry__field">
                       <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Deine E-Mail Adresse" data-required="true" required />
                     </div>
@@ -151,13 +149,14 @@ const {
                         <input type="checkbox" class="input_replaced" value="1" id="OPT_IN" name="OPT_IN" />
                         <span class="checkbox checkbox_tick_positive"
                               style="margin-left:"
-                        ></span><span style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#3C4858; background-color:transparent;"><p>Ich möchte deinen Newsletter erhalten und akzeptiere die Datenschutzerklärung.</p></span> </label>
+                        ></span><span style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#3C4858; background-color:transparent;"><p>Ich möchte den Newsletter erhalten und akzeptiere die <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank"
+                      >Datenschutzrichtlinien</a>. Ich kann das Abonnement jederzeit über einen Link im Newsletter beenden.</p></span> </label>
                     </div>
                   </div>
                   <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
                   </label>
                   <label class="entry__specification" style="font-size:12px; text-align:left; font-family:Helvetica, sans-serif; color:#8390A4; text-align:left">
-                    Du kannst den Newsletter jederzeit über den Link in unserem Newsletter abbestellen.
+                    
                   </label>
                 </div>
               </div>
