Fix image in "about"

--- a/src/components/widgets/Newsletter.astro
+++ b/src/components/widgets/Newsletter.astro
@@ -129,8 +129,9 @@ const {
               <div class="sib-input sib-form-block">
                 <div class="form__entry entry_block">
                   <div class="form__label-row ">
+                    
                     <div class="entry__field">
-                      <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Deine E-Mail Adresse" data-required="true" required />
+                      <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Gib deine E-Mail Adresse ein um dich anzumelden" data-required="true" required />
                     </div>
                   </div>
 
@@ -195,7 +196,7 @@ const {
               </div>
             </div>
             <div style="padding: 8px 0;">
-              <div class="sib-form-block" style="text-align: left">
+              <div class="sib-form-block" style="text-align: center">
                 <button
                   class="btn-primary sib-form-block__button-with-loader"
                   form="sib-form"
