Fix image in "about"

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,8 +3,6 @@ import Hero from '~/components/widgets/Hero.astro';
 import Content from '~/components/widgets/Content.astro';
 import Layout from '~/layouts/PageLayout.astro';
 
-import andreasImage from '~/assets/images/andreas.png';
-
 const metadata = {
   title: 'Über uns',
 };
@@ -50,7 +48,7 @@ const metadata = {
   <Content
     isReversed
     image={{
-      src: andreasImage,
+      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
       alt: 'Andreas Dill',
     }}
   >
