Remove last pieces of dark theme

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,7 +36,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Franziska Kössl</h3>
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Franziska Kössl</h3>
       <span>Gitarrenbaumeisterin</span><br><br>
       Musik wurde Franziska quasi in die Wiege gelegt. Seit 1995 baut sie vorwiegend klassische Gitarren und schloss 2004 ihre Meisterprüfung zur Gitarrenbauerin ab.
       2002 war dann der Startschuss für ihre eigene Gitarrenmarke. Weitere Infos und die aktuellen Modelle findet ihr unter
@@ -70,7 +70,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Michael Lihs</h3>
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Michael Lihs</h3>
       <span>Gitarrenbaugeselle & Softwareentwickler</span><br><br>
       Hat seine erste Gitarre 1995 gebaut und 2004 seine Prüfung zum Gitarrenbau-Gesellen abgeschlossen. Danach folgte ein Studium der Informatik und 
       viele Jahre als Softwareentwickler. Mit der-gitarrenbausatz.de wagt er den Wiedereinstieg in die Welt des Gitarrenbaus, die er allerdings
