Fix dark theme leftovers

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,7 +40,7 @@ const metadata = {
       <span>Gitarrenbaumeisterin</span><br><br>
       Musik wurde Franziska quasi in die Wiege gelegt. Seit 1995 baut sie vorwiegend klassische Gitarren und schloss 2004 ihre Meisterprüfung zur Gitarrenbauerin ab.
       2002 war dann der Startschuss für ihre eigene Gitarrenmarke. Weitere Infos und die aktuellen Modelle findet ihr unter
-      <a href="http://franziska-koessl.de">franziska-koessl.de</a>.
+      <a class="inline-block hover:text-primary transition ease-in duration-200" href="http://franziska-koessl.de">franziska-koessl.de</a>.
     </Fragment>
     
   </Content>
@@ -53,7 +53,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Andreas Dill</h3>
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Andreas Dill</h3>
       <span>Gitarrenbaumeister</span><br><br>
       Baut seit 1982 Gitarren und legte 1989 seine Prüfung zum Gitarrenbaumeister ab. Im gleichen Jahr eröffnete er in Weingarten den <a href="https://der-gitarrenladen.de">Gitarrenladen</a>.
       Neben dem Bau und Verkauf von Gitarren ist er als Berater in der Gitarrenindustried tätig. Dabei liegt ihm besonders der nachhaltige
@@ -87,7 +87,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Sophia Hartmann</h3>
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Sophia Hartmann</h3>
       <span>Wirtschaftsinformatikerin</span><br><br>
       
     </Fragment>
