Fix menu on mobile

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -47,5 +47,9 @@ import '@fontsource-variable/inter';
     ::selection {
       background-color: lavender;
     }
+    
+    #header.expanded nav {
+      top: 150px;
+    }
   }
 </style>
