Add text for Sophia

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -72,7 +72,7 @@ const metadata = {
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Michael Lihs</h3>
       <span>Gitarrenbaugeselle & Softwareentwickler</span><br><br>
-      Hat seine erste Gitarre 1995 gebaut und 2004 seine Prüfung zum Gitarrenbau-Gesellen abgeschlossen. Danach folgte ein Studium der Informatik und 
+      Hat seine erste Gitarre 1995 gebaut und 2004 seine Ausbildung zum Gitarrenbau-Gesellen abgeschlossen. Danach folgte ein Studium der Informatik und 
       viele Jahre als Softwareentwickler. Mit der-gitarrenbausatz.de wagt er den Wiedereinstieg in die Welt des Gitarrenbaus, die er allerdings
       nie ganz verlassen hat.
     </Fragment>
@@ -89,7 +89,8 @@ const metadata = {
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Sophia Hartmann</h3>
       <span>Wirtschaftsinformatikerin</span><br><br>
-      
+      Hilft in ihrem Berufsalltag großen Unternehmen bei der Einführung von Projektmanagement-Software. In unserem Projekt 
+      sorgt sie dafür, dass wir nicht den Überblick verlieren und lernt ihre ersten Akkorde auf der Gitarre.
     </Fragment>
 
   </Content>
