--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,7 +36,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Franziska Kössl</h3>
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Franziska Dill</h3>
       <span>Gitarrenbaumeisterin</span><br><br>
       Musik wurde Franziska quasi in die Wiege gelegt. Seit 1995 baut sie vorwiegend klassische Gitarren und schloss 2004 ihre Meisterprüfung zur Gitarrenbauerin ab.
       2002 war dann der Startschuss für ihre eigene Gitarrenmarke. Weitere Infos und die aktuellen Modelle findet ihr unter
@@ -58,6 +58,22 @@ const metadata = {
       Baut seit 1982 Gitarren und legte 1989 seine Prüfung zum Gitarrenbaumeister ab. Im gleichen Jahr eröffnete er in Weingarten den <a href="https://der-gitarrenladen.de">Gitarrenladen</a>.
       Neben dem Bau und Verkauf von Gitarren ist er als Berater in der Gitarrenindustried tätig. Dabei liegt ihm besonders der nachhaltige
       Bau von Gitarren am Herzen.
+    </Fragment>
+
+  </Content>
+
+  <Content
+    isReversed
+    image={{
+      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      alt: 'Manolo Dill',
+    }}
+  >
+    <Fragment slot="content">
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Andreas Dill</h3>
+      <span>Fotograf und Filmemacher</span><br><br>
+      Manolo ist zwischen Gitarren aufgewachsen und spielt selbst Ukulele und Fagott. Bei uns kümmert er sich um die Fotos
+      und Videos für die Bauanleitung und macht damit auch unsere Webseite etwas bunter.
     </Fragment>
 
   </Content>
