--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,8 +23,8 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-      Die Macher hinter der-gitarrenbausatz.de sind allesamt langjährige Gitarrenbauer (und ein Querwiedereinsteiger), 
-      die seit vielen Jahren aus Leidenschaft Gitarren bauen. 
+      Die Macher hinter der-gitarrenbausatz.de sind langjährige Gitarrenbauer und Musiker. Alle eint ein Ziel: den besten 
+      Gitarrenbausatz zu entwerfen, der es dir ermöglicht, deine Traumgitarre selbst zu bauen.
     </Fragment>
   </Hero>
 
@@ -70,7 +70,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Andreas Dill</h3>
+      <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Manolo Dill</h3>
       <span>Fotograf und Filmemacher</span><br><br>
       Manolo ist zwischen Gitarren aufgewachsen und spielt selbst Ukulele und Fagott. Bei uns kümmert er sich um die Fotos
       und Videos für die Bauanleitung und macht damit auch unsere Webseite etwas bunter.
