Remove unused import in about page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const metadata = {
     subtitle="Der Gitarrenbausatz von Gitarrenbauern für Gitarrenbauer"
     image={{
       src: gitarreFoto1,
-      alt: 'Ränder wickeln bei einer klassischen Gitarre',
+      alt: 'Blick ins Innere einer Gitarre, bevor der Boden verleimt wird',
     }}
     }
   />
