--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,11 +22,11 @@ const metadata = {
     }}
   >
     <Fragment slot="title">
-      Gitarrenbauer aus Leidenschaft
+      Gitarrenbauer_innen aus Leidenschaft
     </Fragment>
 
     <Fragment slot="subtitle">
-      Die Macher hinter der-gitarrenbausatz.de sind langjährige Gitarrenbauer und Musiker. Unser Ziel ist es, den besten Gitarrenbausatz
+      Die Macher hinter der-gitarrenbausatz.de sind langjährige Gitarrenbauer und Musiker. Unser gemeinsames Ziel ist es, den besten Gitarrenbausatz
       anzubieten, mit dem du erfolgreich deine Traumgitarre selber bauen kannst.
     </Fragment>
   </Hero>
