Add new portrait photos in the about section

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,8 @@ import Layout from '~/layouts/PageLayout.astro';
 
 import gitarreFoto1 from '../assets/images/gitarre-14.jpg';
 import fotoManolo from '../assets/images/manolo.jpeg';
+import fotoAndreas from '../assets/images/andreas.jpeg';
+import fotoFranziska from '../assets/images/franziska.jpeg';
 
 const metadata = {
   title: 'Über uns',
@@ -34,7 +36,7 @@ const metadata = {
   <Content
     isReversed
     image={{
-      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      src: fotoFranziska,
       alt: 'Colorful Image',
     }}
   >
@@ -51,7 +53,7 @@ const metadata = {
   <Content
     isReversed
     image={{
-      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      src: fotoAndreas,
       alt: 'Andreas Dill',
     }}
   >
