fix file names for portraits

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,9 +4,9 @@ import Content from '~/components/widgets/Content.astro';
 import Layout from '~/layouts/PageLayout.astro';
 
 import gitarreFoto1 from '../assets/images/gitarre-14.jpg';
-import fotoManolo from '../assets/images/manolo.jpeg';
-import fotoAndreas from '../assets/images/andreas.jpeg';
-import fotoFranziska from '../assets/images/franziska.jpeg';
+import fotoManolo from '../assets/images/manolo.jpg';
+import fotoAndreas from '../assets/images/andreas.jpg';
+import fotoFranziska from '../assets/images/franziska.jpg';
 
 const metadata = {
   title: 'Über uns',
